contact us overflow fixed

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1067,6 +1067,7 @@
 .contact-us-section{
     padding-bottom: 80px;
     position: relative;
+    overflow: hidden;
     .contact-us-heading{
         font-family: $secondary-font;
         font-weight: 400;
